gke-test-deny-external-ingress.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: gke-test-deny-external-ingress
spec:
  podSelector:
    matchLabels:
      app: gke-standard-db-test
  policyTypes:
  - Ingress
  ingress: []
